--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/activityMain_btnShowSuccessToast"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Success" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/activityMain_btnShowWarningToast"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Warning" />
+
+    <Button
+        android:id="@+id/activityMain_btnShowInfoToast"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Info" />
+
+    <Button
+        android:id="@+id/activityMain_btnShowDefaultToast"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Default" />
+
+</LinearLayout>
